Specifies height in project modal to fix safari spacing issue

--- a/style.css
+++ b/style.css
@@ -372,6 +372,7 @@ h3 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100%;
     width: 100%;
     position: relative;
 }
